--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <p><a href="practica6.html"><img src="owl.gif" align="top" width="200">Mis provervios favoritos</a></p>
         <p align="center"><a href="practica4-1.html">Mi hermanito</a></p>
-        <p align="right"><a href="practica4-2.html">Mi gatito</a></p>
+        <p align="right"><a href="practica4-2.html">Mi gatito</a></p><br><br><br>
+        <p align="right"><a href="practica16.html">Mis cantantes favoritos<img src="musica.gif"></a></p>
     </body>
 </html>
