--- a/practica4-1.html
+++ b/practica4-1.html
@@ -5,6 +5,6 @@
     <body background="fondo.gif" link="#006400" vlink="#FF69B4" alink="#D2691E" text="white">
         <h1 align="center">Este es mi hermanito</h1>
         <p align="center">Este es su cumplea&ntilde;os<embed src="hermanito.mp4" width="400" height="400"></embed></p>
-        <p><a href="practica4.html">Regresar al curriculum</a></p>
+        <p><a href="index.html">Regresar al curriculum</a></p>
     </body>
 </html>
