--- a/practica4-2.html
+++ b/practica4-2.html
@@ -5,6 +5,6 @@
     <body background="fondo.gif" link="#006400" vlink="#FF69B4" alink="#D2691E" text="white">
         <h1 align="center">Maullidos</h1>
         <p align="center">Escuchen a mi gatito maullar<embed src="gatito.mp4" width="400" height="400"></embed></p>
-        <p><a href="practica4.html">Regresar al curriculum</a></p>
+        <p><a href="index.html">Regresar al curriculum</a></p>
     </body>
 </html>
