--- a/practica5.html
+++ b/practica5.html
@@ -13,6 +13,6 @@
         <h3 align="center">Visita Londres</h3>
         <p align="right"><a href="https://www.visitbritain.com/es/es/inglaterra/londres"><img src="londres.jpg"  height="200" align="top"></a>Las vacaciones pasadas me fui a Europa y al Reino Unido. Visité muchas ciudades hermosas e hicimos muchas. Visité muchas ciudades hermosas e hicimos muchas fotos digitales. Aquí le muestro mis fotos de Londres, una cintad grande sobre el no Támesis. La zona histórica de Londres está sobre la orilla norte del rio, donde también se encuentran la mayoria de las atracciones turísticas cabe destacar la Torre de Londres, la plaza Trafalgar Square y del Parlamento, la abadía de Westminster, el puente Tower Bridge, el parque Hyde Park, el palacio de Buckingham o la Catedral de San Pablo</p>
         
-        <p align="left"><a href="practica4.html">Regresar al curriculum<img src="yippee.gif" height="100"></a></p>
+        <p align="left"><a href="index.html">Regresar al curriculum<img src="yippee.gif" height="100"></a></p>
     </body>
 </html>
