--- a/practica6.html
+++ b/practica6.html
@@ -24,6 +24,6 @@
             <div align="right"><img src="owl.gif" height="500">
             </p>
 
-            <p align="left"><a href="practica4.html">Regresar al curriculum<img src="yippee.gif" height="100"></a></p>
+            <p align="left"><a href="index.html">Regresar al curriculum<img src="yippee.gif" height="100"></a></p>
     </body>
 </html>
