--- a/practica5.html
+++ b/practica5.html
@@ -5,7 +5,7 @@
     <body>
         <h2 align="center">BELLEZAS DE LA NATURALEZA</h2>
         <p align="center">México nos ofrece un mundo lleno de contrastes. Ciudades inmensas, selvas virgenes, volcanes, playas interminables, ciudades coloniales, paisajes diversos, vida silvestre y desiertos impresionantes entre muchas cosas más. <br>Existe mucho por conocer.</p>
-        <embed src="Pajaro.mpga" height="50">
+        <embed src="Pajaro.mp3" height="50">
         <p align="right"><img src="montañas.jpg"  height="200" align="top">Hay ciertos ecenarios seductores para vivir aventuras en las montañas. Me gusta visitar las <b><i>montañas</i></b>.Me gusta visitar las montañas, ver los rios, las cascadas, la flora y fauna silvestre, pinos, cedros, encinos, los halcones que vuelan en el cielo; oír las aves que cantan, conrrer atras de algun venado u otro animalito, respirar el aire fresco y dulce<br> </p>
 
         <p align="left">Me gusta abandonar la rutina de la ciudad y vivir la aventura de conocer México con sus hermosas <a href="https://www.hoteles.com/go/mexico/mejores-playas-mexico"><b><i>playas</i></b></a> doradas de arena que nos invitan a descansar, a nadar, a hacer locuras imprevistas. Me encanta ir a Acapulco, Cancun, Puerto Escondido a las playas de Huatulco con mis amigos<img src="playa.jpeg"  height="200" align="top"></p>
